--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta nome="author" content="Alexander Medeiros">
     <meta nome="description" content="Personal Trainer">
 
-    <link rel="stylesheet" href="../css/style1.css">
+    <link rel="stylesheet" href="./style1.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +61,7 @@
         <div class="content">
             <h2>Em Breve<br><span>Personal Treinar.</span></h2>
         </div>
-        <video src="../video/1080p.mov" autoplay muted loop></video>
+        <video src="./1080p.mov" autoplay muted loop></video>
         <ul class="sci">
             <li style="--i:1"><a href="https://www.facebook.com/alexandermedeirosp">Facebook</a></li>
             <li style="--i:2"><a href="https://www.instagram.com/alexandermedeirosp/">Instagram</a></li>
